--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -41,48 +41,8 @@
         <img src='images/mochi.png' width='75' alt='A mochi ball'/>
         <img src='images/mochi.svg' alt='A mochi ball with Bézier handles'/>
 
-        <p>Here is my link
-            <a href='https://boiling-harbor-42666.herokuapp.com/lab_1/'> </a>for lab one.
-        </p>
+        <a href="https://boiling-harbor-42666.herokuapp.com/lab_1/">My Link.</a>
+
 
     </body>
 </html>
-
-
-YOUR NAME Lab 1: Intro to HTML
-
-First, the basics.
-
-You need the following to build your website.
-
-HTML and CSS
-Javascript
-Node.js
-And other web development frameworks
-
-You should list your top 3 goals for the class below.
-
-Learn front-end web design
-Learn new programming languages
-Learn how to work with others in a technical space
-Learn popular web dev frameworks
-
-Let's Try Some Inline Elements
-
-Sometimes you want to draw attention to something in a line of text.
-
-Sometimes you want to strongly emphasize something in the text.
-
-Sometimes you want to do both.
-
-Empty Elements
-
-Soft line breaks can't wrap anything. Neither can image tags, or hard lines.
-Add a hard line under here, and make sure you've used some soft line breaks to match your page to the sample.
-
-Images 
-
-Don't forget to use alt text on your images. It's important for accessibility.
-
-Include a hyperlink here to your github repository for class.
-If you want your repo to be private, be sure to invite Prof A as a "collaborator."
