--- a/client/lab_1/index.html
+++ b/client/lab_1/index.html
@@ -34,6 +34,7 @@
         <h2> Closing Regards </h2>
         <p> Looking forward to the class!
         <hr>
+        Sincerly, <br/>
         Uday Aryal </p>
 
         <img src='images/mochi.jpg' width='75' alt='A mochi ball in a bubble'/>
