This is the final product of Lab 2

--- a/client/lab_2/selectors.html
+++ b/client/lab_2/selectors.html
@@ -1,7 +1,32 @@
-CSS Selectors
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <meta charset="UTF-8" />
+    <title>CSS Selectors</title>
+    <link rel="stylesheet" href="styles.css" />
+  </head>
+  <body>
+    <div class="wrapper">
+      <h1 class="title">CSS Selectors</h1>
+      <nav>
+        <a href="selectors.html"> Selectors </a>
+        <a href="index.html"> Main Page </a>
+      </nav>
 
-Selectors
-Main Page
+      <p>
+        CSS selectors let you <em>select</em> individual HTML elements in an
+        HTML document. This is <strong>super</strong> useful.
+      </p>
 
-CSS selectors let you <em>select</em> individual HTML elements in an HTML document. This is <strong>super</strong> useful.
-Classes are ridiculously important, since they allow you to select arbitrary boxes in your web pages.
+      <p>
+        Classes are ridiculously important, since they allow you to select
+        arbitrary boxes in your web pages.
+      </p>
+
+      <p>
+        Once you successfully develop a set of selectors and CSS rules, it's
+        relatively easy to match a document to those rules.
+      </p>
+    </div>
+  </body>
+</html>
