Had a spelling error

--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -45,7 +45,7 @@
         <p> Looking forward to the class!
         
         Thank you! <br/>  
-        Sincerly, <br/>
+        Sincerely, <br/>
         Uday Aryal </p>
 
         <hr>
