My link was broken.

--- a/client/lab_2/index.html
+++ b/client/lab_2/index.html
@@ -76,7 +76,7 @@
     </div>
 
       <div>
-        <a href=https://boiling-harbor-42666.herokuapp.com/lab_2/">My Link.</a>
+        <a href="https://boiling-harbor-42666.herokuapp.com/lab_2/">My Link.</a>
         <p> If you want your repo to be private, be sure to invite the Prof as a "collaborator".</p>
       </div>
     
