--- a/client/lab_3/index.html
+++ b/client/lab_3/index.html
@@ -1,40 +1,58 @@
-YOUR NAME Lab 3: Flexbox Demo
+<!DOCTYPE html>
+<html lang='en-US'>
+	<head>
+		<meta charset='UTF-8'/>
+		<title>Uday Aryal</title>
+		<link rel='stylesheet' href='styles.css'/>
+	</head>
+	<body>
+		<div class = 'wrapper'>
+		<h1 class = 'title'> Uday Aryal Lab 3: Flexbox Demo </h1>
+		<div class='menu-container'>
+			<div class='menu'>
+			
+				<div class='date'> Sept 17, 2021</div>
 
-Selectors
-Main Page
+				<div class='signup'> <a href = 'data.html'> Database Demos </a></div>
+				<div class='login'></div> <a href = 'index.html'> Main Page </a></div> 
+				
+			</div>
+			</div>
+		<div class='header-container'>
+			<div class='header'>
+				<div class='subscribe'> <a href = https://INST377Group19.com> Group Project Discussion Board &#9662;</div>
+				<div class='logo'><img src='images/awesome-logo.svg'/></div>
+				<div class='social'><a href = https://github.com/uaryal/> My Github Website</div>
+			</div>
+		</div>
+		
+		<div class='photo-grid-container'>
+			<div class='photo-grid'>
+				<div class='photo-grid-item'>
+					<img src='images/two.svg'/>
+				</div>
+				<div class='photo-grid-item'>
+					<img src='images/five.svg'/>
+				</div>
+				<div class='photo-grid-item'>
+					<img src='images/one.svg'/>
+				</div>
+				<div class='photo-grid-item'>
+					<img src='images/four.svg'/>
+				</div>
+				<div class='photo-grid-item last-item'>
+					<img src='images/three.svg'/>
+				</div>
+			</div>
+		</div>
 
-First, the basics.
+		<div class='footer'>
+			<div class='footer-item footer-one'>Footer Item 1</div>
+			<div class='footer-item footer-two'> Footer Item 2</div>
+			<div class='footer-item footer-three'>Footer Item 3</div>
+		</div>
+		
+</div>
 
-You need the following to build your website.
-
-HTML and CSS
-Javascript
-Node.js
-And other web development frameworks
-
-You should list your top 3 goals for the class below.
-
-Learn front-end web design
-Learn new programming languages
-Learn how to work with others in a technical space
-Learn popular web dev frameworks
-
-Let's Try Some Inline Elements
-
-Sometimes you want to draw attention to something in a line of text.
-
-Sometimes you want to strongly emphasize something in the text.
-
-Sometimes you want to do both.
-
-Empty Elements
-
-Soft line breaks can't wrap anything. Neither can image tags, or hard lines.
-Add a hard line under here, and make sure you've used some soft line breaks to match your page to the sample.
-
-Images 
-
-Don't forget to use alt text on your images. It's important for accessibility.
-
-Include a hyperlink here to your github repository for class.
-If you want your repo to be private, be sure to invite Prof A as a "collaborator."
+	</body>
+</html>
