--- a/client/lab_4/index.html
+++ b/client/lab_4/index.html
@@ -20,9 +20,9 @@
 
     <div class='header-container'>
         <div class='header'>
-            <div class='subscribe'> <a href = https://INST377Group19.com> Group Project Website &#9662;</div>
+            <div class='subscribe'> <a href = https://INST377Group19.com> Group Project Website &#9662;</a></div>
             <div class='logo'><img src='images/awesome-logo.svg'/></div>
-            <div class='social'><a href = https://github.com/uaryal/> My Github Website</div>
+            <div class='social'><a href = https://github.com/uaryal/> My Github Website</a></div>
         </div>
     </div>
 
