--- a/client/index.html
+++ b/client/index.html
@@ -58,6 +58,7 @@
                   <li><a href="./lab_7">Lab 7 - Javascript 3: External Libraries</a></li>
                   <li><a href="./flappy/">Flappy-Bird</a></li>
                   <li><a href="./Doodle/">Doodle Jump</a></li>
+                  <li><a href="./Tetris/">Tetris</a></li>
                 </ul>
                 <div class="menu-label">Individual Labs for 377</div>
               </aside>
