Lab 5 changes to the field inputs and CSS

--- a/client/lab_5/index.html
+++ b/client/lab_5/index.html
@@ -1,29 +1,31 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
+<head>
     <meta charset="utf-8">
-    <title>Lab 5 - HTML Form</title>
+    <title>Uday Aryal | Lab 5 | HTML Form</title>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@0.9.3/css/bulma.min.css">
     <link rel="stylesheet" href="styles.css">
-  </head>
+</head>
+
+<body>
   <body class="p-3">
     <div class="notification is-warning">
       Uday Aryal Lab 5
     </div>
+    
     <div class="columns is-centered is-vcentered">
       <div class="column is-one-quarter">
         <form class="box" action="/api">
           <div class="field">
-            <label class="label">First Name</label>
+            <label class="label">First and Last Name</label>
             <div class="control">
-              <input name="first_name" class="input" type="text">
+              <input name="first_name" class="input" type="text" placeholder="Uday Aryal">
             </div>
           </div>
-
           <div class="field">
             <label class="label">Food Preference</label>
             <div class="control">
-              <input name="food_pref" class="input" type="text">
+              <input name="food_pref" class="input" type="text" placeholder="Butter Chicken">
             </div>
           </div>
 
@@ -47,12 +49,11 @@
       <div class="column is-one-third">
         <div class="card">
           <div class="card-content">
-            <div class="content">
               This is going to be something in two weeks.
             </div>
           </div>
         </div>
       </div>
-    </div>
+      
   </body>
 </html>
