Remove Last Name Field

--- a/client/lab_5/index.html
+++ b/client/lab_5/index.html
@@ -17,9 +17,9 @@
       <div class="column is-one-quarter">
         <form class="box" action="/api">
           <div class="field">
-            <label class="label">First and Last Name</label>
+            <label class="label">First Name</label>
             <div class="control">
-              <input name="first_name" class="input" type="text" placeholder="Uday Aryal">
+              <input name="first_name" class="input" type="text" placeholder="Uday">
             </div>
           </div>
           <div class="field">
